@@ -200,10 +200,11 @@ public class HierarchyHandler implements EventHandler {
         });
 
         if (!expandLevels.isEmpty()) {
-            List<Integer> expandedIds = expandLevels.keySet().stream().map(key -> (Integer) key).collect(Collectors.toList());
+            List<Integer> expandedIds = expandLevels.keySet().stream().map(key -> (Integer) key).toList();
             List<Integer> lookupKeys = lookup.keySet().stream().toList();
-            CqnSelect expandedCQN = Select.from(AdminService_.GENRE_HIERARCHY).where(gh -> CQL.and(filter,
-            CQL.or(gh.node_id().in(expandedIds), gh.parent_id().in(expandedIds))));
+            CqnSelect expandedCQN = Select.from(AdminService_.GENRE_HIERARCHY).where(gh -> 
+                    CQL.and(filter,
+                    CQL.or(gh.node_id().in(expandedIds), gh.parent_id().in(expandedIds))));
             
             List<GenreHierarchy> expanded = db.run(expandedCQN).listOf(GenreHierarchy.class);
             expanded.forEach(gh -> {
